--- a/jl-styles.css
+++ b/jl-styles.css
@@ -1,6 +1,14 @@
+/*
+    CSS styles - &copy; 2023 - JL
+*/
+
+/* Google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Caveat&family=Courgette&family=Inter&family=Lora&family=Montserrat&family=Nunito+Sans:opsz@6..12&family=Pacifico&family=Roboto&family=Ubuntu+Mono&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
+    font-family: "Acme", sans-serif;
 }
 
 div {
