--- a/jl-styles.css
+++ b/jl-styles.css
@@ -5,10 +5,11 @@
 /* Google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Acme&family=Caveat&family=Courgette&family=Inter&family=Lora&family=Montserrat&family=Nunito+Sans:opsz@6..12&family=Pacifico&family=Roboto&family=Ubuntu+Mono&display=swap');
 
-html, body {
+html, body, * {
     margin: 0;
     padding: 0;
-    font-family: "Acme", sans-serif;
+    font-family: "Montserrat", sans-serif;
+    box-sizing: border-box;
 }
 
 div {
@@ -22,3 +23,21 @@ header, footer {
     color: white;
 }
 
+main {
+    margin-top: 64px;
+    margin-bottom: 64px;
+}
+
+aside {
+    float: left;
+    width: 24vw;
+}
+
+section {
+    float: right;
+    width: 74vw;
+}
+
+.stopfloats {
+    clear: both;
+}
