--- a/css/messtyles.css
+++ b/css/messtyles.css
@@ -11,7 +11,7 @@ html, body {
     color: black}
 
 #logo {
-    position: absolute;
+    position: fixed;
     left: 1vw;
     top: 1vw;
     width: 8vw;
@@ -20,12 +20,12 @@ html, body {
 }
 
 #burger, #burger_x {
-    position: absolute;
+    position: fixed;
     right: 1vw;
     top: 1vw;
     width: 8vw;
     height: 8vw;
-    z-index: 50;
+    z-index: 100;
 }
 
 
